Refactored the Twitch Component